--- a/css_1.css
+++ b/css_1.css
@@ -1,7 +1,7 @@
 body {
-    background-color: #e6ebf1;
+    background-color: #add8e6;
     font-family: Arial, Helvetica, sans-serif;
-    color: #222;
+    color: #000000;
     margin: 0;
     padding: 0;
 }
@@ -28,8 +28,8 @@ p {
 }
 
 #paragraph2 {
-    width: 600px;
-    margin: 15px auto;
+    width: 850px;              
+    margin: 15px 0 15px 20px; 
     padding: 15px;
     border: 2px solid #8a8a8a;
     background-color: #f9f9f9;
@@ -37,12 +37,16 @@ p {
 }
 
 .blue {
-    color: #1d4ed8;
-    font-weight: bold;
+    background-color: #191f6b;   
+    color: #ffffff;             
+    padding: 15px;
+    margin: 12px 0;
+    line-height: 1.7;
 }
 
+
 a {
-    color: #1e40af;
+    color: #0026a3;
     text-decoration: none;
 }
 
@@ -51,30 +55,35 @@ a:hover {
 }
 
 a[href*="w3schools"] {
-    color: #0f766e;
+    color: #760f18;
     font-weight: bold;
 }
 
 ol {
     list-style-type: decimal-leading-zero;
-    margin-left: 30px;
+    margin-left: 0;     
+    padding-left: 0;   
+}
+
+ol li a {
+    text-decoration: underline;
 }
 
 table {
     border-collapse: collapse;
-    width: 80%;
+    width: auto;
     margin-top: 10px;
 }
 
 th, td {
-    border: 2px solid #555;
+    border: 1px solid #000000;
     padding: 10px;
 }
 
 th {
-    background-color: #cbd5e1;
+    background-color: #d3d3d3;
 }
 
 td {
-    background-color: #eef2f7;
+    background-color: #ffffff;
 }
