--- a/css_1.css
+++ b/css_1.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: #000000;
     margin: 0;
-    padding: 0;
+    padding: 15px;
 }
 
 h1 {
@@ -31,13 +31,13 @@ p {
     width: 850px;              
     margin: 15px 0 15px 20px; 
     padding: 15px;
-    border: 2px solid #8a8a8a;
-    background-color: #f9f9f9;
+    border: 2px solid #008000;
+    background-color: #ffffff;
     line-height: 1.8;
 }
 
 .blue {
-    background-color: #191f6b;   
+    background-color: #00098d;   
     color: #ffffff;             
     padding: 15px;
     margin: 12px 0;
@@ -46,7 +46,7 @@ p {
 
 
 a {
-    color: #0026a3;
+    color: #003cff;
     text-decoration: none;
 }
 
@@ -59,10 +59,15 @@ a[href*="w3schools"] {
     font-weight: bold;
 }
 
+a[href*="w3schools"] {
+    text-decoration: underline;
+}
+
 ol {
     list-style-type: decimal-leading-zero;
-    margin-left: 0;     
-    padding-left: 0;   
+    list-style-position: inside; 
+    margin-left: 0;
+    padding-left: 0;
 }
 
 ol li a {
